# autopew

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  Logo  MANIFEST.in  README.md  environment.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: unittest.yml
Logo/: Readme
_draft/coordtransform/: coordtransform.py  test_transform.py
_draft/qtimage/: QtImageViewer.py  qtimage.py  qtimageselect.py
_draft/stage/: __init__.py
_draft/targets/: targets.py
autopew/: __init__.py  _version.py  gui.py  registration.py  session.py  targets.py  util.py
autopew/data/: NOR1-3B.csv  _AutosavedScans.scancsv
autopew/graph/: __init__.py  network.py
autopew/gui/: __init__.py  base.py  windows.py
autopew/image/: __init__.py  base.py  registration.py
autopew/io/: __init__.py
autopew/transform/: __init__.py  affine.py  calibration.py  vis.py
autopew/util/: __init__.py  array.py  general.py  gui.py  meta.py  plot.py  reports.py  writelase.py
autopew/workflow/: __init__.py  laser.py
docs/: makeviewhtml.bat
docs/examples/: concept.py  image2laser.py
docs/source/: API.rst  conduct.rst  conf.py  dev.rst  docs.rst  future.rst  index.rst  installation.rst  setup.cfg  setup.py  submodules.rst  tests.rst
test/: test_calibration.py  test_gui.py  test_pewbase.py  test_registration.py  test_transform.py  test_util_gui.py
test/graph/: test_network.py
test/gui/: test_gui.py
test/image/: test_image.py  test_registration.py
test/io/: test_io.py
test/transform/: test_affine.py  (+2 more)
(+53 files in other folders)
