[aliases]
test=pytest

[tool:pytest]
addopts =  --cov=autopew --cov-report html --cov-config .coveragerc --cov-report term-missing --ignore=draft

[versioneer]
VCS = git
style = pep440
versionfile_source = autopew/_version.py
versionfile_build = autopew/_version.py
tag_prefix =
parentdir_prefix = autopew-

[metadata]
description_file = README.md
license_file = LICENSE
