[aliases]
test=pytest

[tool:pytest]
addopts = test --cov=autopew --cov-report xml --cov-config .coveragerc --cov-report term-missing --ignore=_draft
python_files = *.py

[versioneer]
VCS = git
style = pep440
versionfile_source = autopew/_version.py
versionfile_build = autopew/_version.py
tag_prefix =
parentdir_prefix = autopew-

[metadata]
description_file = README.md
license_file = LICENSE
